overflow correction

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     font-family: 'Inter', sans-serif;
     background-color: #1D1C1C;
     color: white;
-    overflow: hidden;
+    overflow: auto;
 }
 
 /* Header styles */
